--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survey Form</title>
-    <link rel="stylesheet" href="/project/FreeCodeCamp/Survey Form/SFstyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 id="title">Healthy Lifestyle and Wellness Survey</h1>
