--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
             <fieldset>
                 <legend>How important is mental health to you</legend>
                 <label>
-                    <input type="checkbox" value="m1"> Very important
+                    <input type="radio" value="m1"> Very important
                 </label>
                 <label>
-                    <input type="checkbox" value="m2"> Somewhat important
+                    <input type="radio" value="m2"> Somewhat important
                 </label>
                 <label>
-                    <input type="checkbox" value="m3"> Not important
+                    <input type="radio" value="m3"> Not important
                 </label>
             </fieldset>
         </div>
