--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
         <div>
             <fieldset>
                 <legend>How important is mental health to you</legend>
-                <label>
-                    <input type="radio" value="m1"> Very important
+               <label>
+                    <input type="radio" name="mental-health" value="m1" checked> Very important
                 </label>
                 <label>
-                    <input type="radio" value="m2"> Somewhat important
+                    <input type="radio" name="mental-health" value="m2"> Somewhat important
                 </label>
                 <label>
-                    <input type="radio" value="m3"> Not important
+                    <input type="radio" name="mental-health" value="m3"> Not important
                 </label>
             </fieldset>
         </div>
